# Othello

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  board.cpp  board.h  color.h  coordinates.h  disk.cpp  disk.h  game.cpp  game.h  human_player.cpp  human_player.h  player.h  scoreboard.cpp  scoreboard.h  test_board.cpp
test/: BoardTest.cpp  CMakeLists.txt  DiskTest.cpp
